--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/security?serverTimezone=Asia/S
 spring.datasource.username=cos
 spring.datasource.password=cos1234
 
-# mustache ?? ? ???
-spring.mvc.view.prefix=/templates/
-spring.mvc.view.suffix=.mustache
+spring.mvc.view.prefix=/resources/templates/
+spring.mvc.view.suffix=.html
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
